--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ resources/select2-dmoj.css
 resources/style.css
 resources/vars.scss
 sass_processed
+resources/select2-dmoj.css
+
+package.json
+package-lock.json
+websocket/config.js
+node_modules
