Add msal into requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -39,3 +39,5 @@ django-admin-sortable2
 icalendar
 # This is a celery dependency whose latest major version is breaking everything.
 importlib-metadata<5
+# Microsoft login
+msal
